DT-581 adding tanagra api call